--- a/a integrer/index.html
+++ b/a integrer/index.html
@@ -71,7 +71,7 @@
             src="https://maps.googleapis.com/maps/api/js?libraries=places&amp;key=AIzaSyDscvWng091i0lJNUVQo_ozwDUlaATRQpw"></script>
 
     <!-- Custom JS code to bind to Autocomplete API -->
-    <script type="text/javascript" src="../public/js/autocomplete.js"></script>
+    <script type="text/javascript" src="autocomplete.js"></script>
   </body>
 </html>
 
